--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Half-Doom - Coming soon!</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/global.css">
+    <script src="/static/js/global.js"></script>
+    <title>Half-Doom... we're working on it.</title>
   </head>
-  <body>
-    <p>Half-Doom and the site are under heavy construction, we'll be back soon!</p><br>
-    <p>Don't start fighting without me!</p><br>
-    <p>-HD Dev Team</p>
+  <body onload="start();">
+    <center>
+      <div style="height:400px;">
+        <br><br><br>
+        <font size="6" color="white">Half-Doom</font><br>
+        <font size="4" color="white">Coming soon lol</font><br>
+      </div>
+      <font color="white" size="2">
+        &copy; 2021 Siesmonic Software, Inc. All Rights Reserved<br>
+        Wanna be nice or complain to us? <a href="#"><font color="red">Email us</font></a><br>
+        Web page maintained on GitHub<br><br>
+        Date/time last updated: <b><font color="gold" id="datetimelu">4-28-2021 9:33:33 CST</font></b><br>
+        Current date/time: <b><font color="gold" id="datetimecurrent">{date}</font></b><br>
+      </font>
+    </center>
   </body>
 </html>
