--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/static/css/global.css">
-    <script src="/static/js/global.js"></script>
+    <link rel="stylesheet" type="text/css" href="/half-doom/static/css/global.css">
+    <script src="/half-doom/static/js/global.js"></script>
     <title>Half-Doom... we're working on it.</title>
   </head>
   <body onload="start();">
