--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <font size="4" color="white">Coming soon lol</font><br>
       </div>
       <font color="white" size="2">
+        <a href="#"><font color="red">Games / Software</font></a> | <a href="#"><font color="red">Store</font></a> | <a href="#"><font color="red">Clans</font></a> | <a href="#"><font color="red">Site Map</font></a>
+        <br><br>
         &copy; 2021 Siesmonic Software, Inc. All Rights Reserved<br>
         Wanna be nice or complain to us? <a href="#"><font color="red">Email us</font></a><br>
         Web page maintained on GitHub<br><br>
