--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       </div>
       <font color="white" size="2">
         <font size="4">
-          <a href="#"><font color="red">Games / Software</font></a> | <a href="#"><font color="red">Store</font></a> | <a href="#"><font color="red">Clans</font></a> | <a href="#"><font color="red">Site Map</font></a>
+          <a href="#"><font color="red">Games / Software</font></a> | <a href="#"><font color="red">Store</font></a> | <a href="/clans/"><font color="red">Clans</font></a> | <a href="/sitemap.html"><font color="red">Site Map</font></a>
         </font>
         <br><br>
         &copy; 2021 Siesmonic Software, Inc. All Rights Reserved<br>
         Wanna be nice or complain to us? <a href="#"><font color="red">Email us</font></a><br>
         Web page maintained on GitHub<br><br>
-        Date/time last updated: <b><font color="gold" id="datetimelu">5-5-2021 18:24:25 CST</font></b><br>
+        Date/time last updated: <b><font color="gold" id="datetimelu">5-5-2021 18:34:40 CST</font></b><br>
         Current date/time: <b><font color="gold" id="datetimecurrent">{date}</font></b><br>
       </font>
     </center>
