--- a/clans/index.html
+++ b/clans/index.html
@@ -8,9 +8,9 @@
   <body>
     <center>
       <font size="6" color="white">
-        Multiplayer Clans
-        This page is under maintenance.
-        5-5-2021 18:32:55 PM CST
+        Multiplayer Clans<br>
+        This page is under maintenance.<br>
+        5-5-2021 18:32:55 PM CST<br>
       </font>
     </center>
   </body>
