--- a/clans/list.html
+++ b/clans/list.html
@@ -8,9 +8,9 @@
   <body>
     <center>
       <font size="6" color="white">
-        Multiplayer Clans List
-        This page is under maintenance.
-        5-5-2021 18:33:24 PM CST
+        Multiplayer Clans List<br>
+        This page is under maintenance.<br>
+        5-5-2021 18:33:24 PM CST<br>
       </font>
     </center>
   </body>
